Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/admin_view_user.xhtml
+++ b/src/main/webapp/admin_view_user.xhtml
@@ -50,6 +50,9 @@
                     <p:column selectionMode="multiple" style="width: 25px;">
                     </p:column>
                     
+                    <p:column headerText="id">
+                        <h:outputLabel value="#{u.id}"/>
+                    </p:column>
                     <p:column headerText="Full Name">
                         <h:inputText value="#{u.webUserPerson.name}"/>
                     </p:column>
