--- a/src/main/webapp/collecting_centre/collecting_center_credit_note_bill.xhtml
+++ b/src/main/webapp/collecting_centre/collecting_center_credit_note_bill.xhtml
@@ -36,7 +36,7 @@
                         <p:outputLabel value="Payment" />
                         <p:inputText autocomplete="off" value="#{agentPaymentRecieveBillController.amount}"/>                               
                         <p:outputLabel value="Description"/>
-                        <p:inputTextarea value="#{agentPaymentRecieveBillController.current.comments}"/>                                                         
+                        <p:inputTextarea value="#{agentPaymentRecieveBillController.comment}"/>                                                         
                     </p:panelGrid>
                 </p:panel>
             </h:panelGroup>
