--- a/src/main/webapp/dataAdmin/report_entered_data.xhtml
+++ b/src/main/webapp/dataAdmin/report_entered_data.xhtml
@@ -53,6 +53,11 @@
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Update Service/Investigation Institution And Department Data" action="opd_service_Investigation_list" onclick="onSubmitButton();"/>
                                     </h:panelGrid>
                                 </p:panel>
+                                <p:panel header="Patient Reistration" style="width: 400px;margin: auto;" collapsed="true" toggleable="true">
+                                    <h:panelGrid columns="1">
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Patient Report" action="/patient_registration_1" onclick="onSubmitButton();"/>
+                                    </h:panelGrid>
+                                </p:panel>
                             </h:panelGrid>
 
                             <h:panelGrid columns="1">
