--- a/src/main/webapp/hr/hr_roster.xhtml
+++ b/src/main/webapp/hr/hr_roster.xhtml
@@ -7,7 +7,7 @@
                 xmlns:f="http://java.sun.com/jsf/core">
 
     <ui:define name="content">
-        <h:form>
+        <h:form>    
             <p:panel header="Manage Rosters" styleClass="verticalAndHorizontalCenteringLarge">
                 <h:panelGrid id ="gpVeda" columns="2" styleClass="alignTop" >
                     <h:panelGrid id="gpSelect" columns="1"  >
@@ -15,7 +15,7 @@
                             <h:panelGrid id="gpSelectText" >
                                 <p:selectOneListbox converter="rosterCon"  id="lstSelect"  
                                                     value="#{rosterController.current}" 
-                                                    style="min-width: 223px;min-height: 300px;">
+                                                    style="min-width: 223px;height: 300px;">
                                     <f:selectItems  value="#{rosterController.items}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
                                     <f:ajax render="gpDetail" execute="lstSelect" >
                                     </f:ajax>
