after 2017 11 24 update Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/channel/channel_report_consultant_month_count_1.xhtml
+++ b/src/main/webapp/channel/channel_report_consultant_month_count_1.xhtml
@@ -15,7 +15,7 @@
 
             <p:panel>
                 <f:facet name="header">
-                    <p:outputLabel value="Consultant Wise Appoinment Totals And Count" />
+                    <p:outputLabel value="Consultant Wise Appoinment Totals And Count(Can't Consider Appoinment Time)" />
                     <p:commandButton id="btnBack" value="Back" 
                                      action="/channel/channel_reports" style="float: right;"
                                      ajax="false">
