--- a/src/main/webapp/inward/inward_reports.xhtml
+++ b/src/main/webapp/inward/inward_reports.xhtml
@@ -33,6 +33,7 @@
                                     <p:commandButton styleClass="linkButton" ajax="false" value="(6)Doctor Payment Due Report Inwad" action="inward_report_professional_payment_due" actionListener="#{inwardStaffPaymentBillController.makenull()}"/>
                                     <p:commandButton styleClass="linkButton" ajax="false" value="(7)All Doctors Search" action="report_all_doctors" actionListener="#{inwardStaffPaymentBillController.makenull()}"/>
                                     <p:commandButton styleClass="linkButton" ajax="false" value="(9)Doctor Payment Done Detailed" action="inward_report_professional_done_payment"/>
+                                    <p:commandButton styleClass="linkButton" ajax="false" value="(10)Doctor Payment Due OPD and Inward" action="inward_professional_payment_and_opd_payment_due"/>
 
                                 </h:panelGrid>
                             </p:panel>
