--- a/src/main/webapp/resources/pharmacy/transferRequest.xhtml
+++ b/src/main/webapp/resources/pharmacy/transferRequest.xhtml
@@ -82,6 +82,13 @@
                         </f:facet>
                         <h:outputLabel value="#{bip.item.name}"/>
                     </p:column>
+                    
+                    <p:column style="text-align: left!important;">
+                        <f:facet name="header">
+                            <h:outputLabel value="Item Code"/>
+                        </f:facet>
+                        <h:outputLabel value="#{bip.item.code}"/>
+                    </p:column>
 
                     <p:column  style="width: 300px!important; text-align: right!important; padding-right: 50px;">
                         <f:facet name="header">
