--- a/src/main/webapp/channel/channel_booking.xhtml
+++ b/src/main/webapp/channel/channel_booking.xhtml
@@ -103,7 +103,7 @@
                                  selection="#{bookingController.selectedServiceSession}"
                                  scrollable="true" 
                                  scrollHeight="280" rowStyleClass="#{ses.deactivated ? 'redText':''}" styleClass="noBorder" 
-                                 style="height: 300px; width: 400px;">
+                                 style="height: 300px; width: 420px;">
 
                         <p:ajax event="rowSelect" process="@this tblSessionsOfSelectedConsultant" 
                                 update=":#{p:component('tblBookingsOfSelectedSession')} 
@@ -226,9 +226,9 @@
                             <p:outputLabel value="#{bs.bill.creditCompany.institutionCode}"/>
                             <p:outputLabel value="(#{bs.bill.toStaff.code})" rendered="#{bs.bill.toStaff ne null}"/>
                         </p:column> 
-<!--                        <p:column headerText="P/A" style="width: 10px!important;">                           
-                            <p:outputLabel value="Absent"  rendered="#{bs.absent}"/>  
-                        </p:column> -->
+                        <!--                        <p:column headerText="P/A" style="width: 10px!important;">                           
+                                                    <p:outputLabel value="Absent"  rendered="#{bs.absent}"/>  
+                                                </p:column> -->
                     </p:dataTable>    
                 </h:panelGroup>
 
@@ -485,48 +485,54 @@
                             </h:panelGrid>
                         </p:tab>
                         <p:tab  id="tabSearchPt" title="Search Pateint">
-                            <p:autoComplete widgetVar="aPt" id="acPt" forceSelection="true" 
-                                            value="#{channelBillController.searchPatient}" 
-                                            completeMethod="#{patientController.completePatientByNameOrCode}" 
-                                            var="apt" itemLabel="#{apt.person.name}" 
-                                            itemValue="#{apt}" size="30"  styleClass="mediuminput">
-                                <p:column headerText="Name">
-                                    <h:outputLabel value="#{apt.person.nameWithTitle}" />
-                                </p:column>
+                            <h:panelGrid columns="1" >
+                                <p:selectBooleanCheckbox value="#{patientController.reportKeyWord.additionalDetails}" 
+                                                         itemLabel="Serch Only Registed Patient" >
+                                    <f:ajax execute="@this" render="acPt" />
+                                </p:selectBooleanCheckbox>
+                                <p:autoComplete widgetVar="aPt" id="acPt" forceSelection="true" 
+                                                value="#{channelBillController.searchPatient}" 
+                                                completeMethod="#{patientController.completePatientByNameOrCode}" 
+                                                var="apt" itemLabel="#{apt.person.name}" 
+                                                itemValue="#{apt}" size="30"  styleClass="mediuminput">
+                                    <p:column headerText="Name">
+                                        <h:outputLabel value="#{apt.person.nameWithTitle}" />
+                                    </p:column>
 
-                                <p:column headerText="Age">
-                                    <h:outputLabel value="#{apt.age}" />
-                                </p:column>
-                                <p:column headerText="Code">
-                                    <h:outputLabel value="#{apt.code}" />
-                                </p:column>
-                                <p:column headerText="Sex">
-                                    <h:outputLabel value="#{apt.person.sex}" />
-                                </p:column>
-                                <p:column headerText="Address">
-                                    <h:outputLabel value="#{apt.person.address}" />
-                                </p:column>
-                                <p:column headerText="Date of Birth">
-                                    <h:outputLabel value="#{apt.person.dob}" >
-                                        <f:convertDateTime pattern="dd MMMM yyyy"/>
-                                    </h:outputLabel>
-                                </p:column>
-                                <p:ajax event="itemSelect" process="@this" update="panSearch"/>
-                            </p:autoComplete>
-                            <h:panelGrid id="panSearch" columns="2" >
-                                <h:outputLabel  rendered="#{channelBillController.searchPatient!=null}" value="Name" />
-                                <h:outputLabel rendered="#{channelBillController.searchPatient!=null}" value=": #{channelBillController.searchPatient.person.nameWithTitle}" />
-                                <h:outputLabel  rendered="#{channelBillController.searchPatient!=null}" value="Code" />
-                                <h:outputLabel rendered="#{channelBillController.searchPatient!=null}" value=": #{channelBillController.searchPatient.code}" />
-                                <h:outputLabel  rendered="#{channelBillController.searchPatient!=null}" value="Phone" />
-                                <h:outputLabel rendered="#{channelBillController.searchPatient!=null}" value=": #{channelBillController.searchPatient.person.phone}" />
-                                <h:outputLabel  rendered="#{channelBillController.searchPatient!=null}" value="Sex" />
-                                <h:outputLabel rendered="#{channelBillController.searchPatient!=null}" value=": #{channelBillController.searchPatient.person.sex}" />
-                                <h:outputLabel  rendered="#{channelBillController.searchPatient!=null}" value="Address" />
-                                <h:outputLabel rendered="#{channelBillController.searchPatient!=null}" value=": #{channelBillController.searchPatient.person.address}" />
-                                <h:outputLabel  rendered="#{channelBillController.searchPatient!=null}" value="Age" />
-                                <h:outputLabel rendered="#{channelBillController.searchPatient!=null}" value=": #{channelBillController.searchPatient.age}" />
-                            </h:panelGrid>   
+                                    <p:column headerText="Age">
+                                        <h:outputLabel value="#{apt.age}" />
+                                    </p:column>
+                                    <p:column headerText="Code">
+                                        <h:outputLabel value="#{apt.code}" />
+                                    </p:column>
+                                    <p:column headerText="Sex">
+                                        <h:outputLabel value="#{apt.person.sex}" />
+                                    </p:column>
+                                    <p:column headerText="Address">
+                                        <h:outputLabel value="#{apt.person.address}" />
+                                    </p:column>
+                                    <p:column headerText="Date of Birth">
+                                        <h:outputLabel value="#{apt.person.dob}" >
+                                            <f:convertDateTime pattern="dd MMMM yyyy"/>
+                                        </h:outputLabel>
+                                    </p:column>
+                                    <p:ajax event="itemSelect" process="@this" update="panSearch"/>
+                                </p:autoComplete>
+                                <h:panelGrid id="panSearch" columns="2" >
+                                    <h:outputLabel  rendered="#{channelBillController.searchPatient!=null}" value="Name" />
+                                    <h:outputLabel rendered="#{channelBillController.searchPatient!=null}" value=": #{channelBillController.searchPatient.person.nameWithTitle}" />
+                                    <h:outputLabel  rendered="#{channelBillController.searchPatient!=null}" value="Code" />
+                                    <h:outputLabel rendered="#{channelBillController.searchPatient!=null}" value=": #{channelBillController.searchPatient.code}" />
+                                    <h:outputLabel  rendered="#{channelBillController.searchPatient!=null}" value="Phone" />
+                                    <h:outputLabel rendered="#{channelBillController.searchPatient!=null}" value=": #{channelBillController.searchPatient.person.phone}" />
+                                    <h:outputLabel  rendered="#{channelBillController.searchPatient!=null}" value="Sex" />
+                                    <h:outputLabel rendered="#{channelBillController.searchPatient!=null}" value=": #{channelBillController.searchPatient.person.sex}" />
+                                    <h:outputLabel  rendered="#{channelBillController.searchPatient!=null}" value="Address" />
+                                    <h:outputLabel rendered="#{channelBillController.searchPatient!=null}" value=": #{channelBillController.searchPatient.person.address}" />
+                                    <h:outputLabel  rendered="#{channelBillController.searchPatient!=null}" value="Age" />
+                                    <h:outputLabel rendered="#{channelBillController.searchPatient!=null}" value=": #{channelBillController.searchPatient.age}" />
+                                </h:panelGrid> 
+                            </h:panelGrid>  
                         </p:tab>
                         <p:tab  id="tabFees" title="Fees" rendered="#{sessionController.institutionPreference.applicationInstitution eq 'Cooperative' and bookingController.selectedServiceSession.originatingSession.forBillType eq 'XrayScan'}" >
                             <p:dataTable value="#{bookingController.selectedServiceSession.originatingSession.itemFees}" var="f" rowStyleClass="#{(f.name.equals('Doctor Fee') or f.name.equals('Hospital Fee')) ? '':'noDisplayRow'}" >
@@ -771,12 +777,12 @@
                                         </p:outputLabel>
                                         <p:separator rendered="#{bookingController.selectedBillSession.bill.printed==true}" ></p:separator>
                                         <p:separator rendered="#{bookingController.selectedBillSession.bill.printed==true}" ></p:separator>
-<!--                                        <p:outputLabel value="Printed User"/>
-                                        <p:outputLabel value="#{bookingController.selectedBillSession.bill.printedUser.webUserPerson.nameWithTitle}"/>
-                                        <p:outputLabel value="Printed At"/>
-                                        <p:outputLabel value="#{bookingController.selectedBillSession.bill.printedAt}"> 
-                                            <f:convertDateTime pattern="dd/MMM/yyyy - hh:mm a" ></f:convertDateTime>
-                                        </p:outputLabel>-->
+                                        <!--                                        <p:outputLabel value="Printed User"/>
+                                                                                <p:outputLabel value="#{bookingController.selectedBillSession.bill.printedUser.webUserPerson.nameWithTitle}"/>
+                                                                                <p:outputLabel value="Printed At"/>
+                                                                                <p:outputLabel value="#{bookingController.selectedBillSession.bill.printedAt}"> 
+                                                                                    <f:convertDateTime pattern="dd/MMM/yyyy - hh:mm a" ></f:convertDateTime>
+                                                                                </p:outputLabel>-->
                                         <p:separator rendered="#{bookingController.selectedBillSession.bill.cancelled==true or bookingController.selectedBillSession.bill.refunded==true}" ></p:separator>
                                         <p:separator rendered="#{bookingController.selectedBillSession.bill.cancelled==true or bookingController.selectedBillSession.bill.refunded==true}" ></p:separator>
                                         <p:outputLabel style="color: red" value="Payment" rendered="#{bookingController.selectedBillSession.bill.cancelled==true or bookingController.selectedBillSession.bill.refunded==true}" />
@@ -1346,6 +1352,10 @@
                                 <h:panelGrid columns="1">
                                     <p:commandButton value="Pay Selected Doctor" action="#{bookingController.paySelectedDoctor}" 
                                                      ajax="false" onclick="onSubmitButton();" />                                        
+                                    <p:commandButton value="Go To Channel Shedule"
+                                                     rendered="#{webUserController.hasPrivilege('Developers')}"
+                                                     action="/channel/channel_shedule" 
+                                                     ajax="false" onclick="onSubmitButton();" />                                                                                  
                                 </h:panelGrid>
                             </p:panel>
                         </p:tab>
