--- a/src/main/webapp/patient_registration.xhtml
+++ b/src/main/webapp/patient_registration.xhtml
@@ -45,9 +45,13 @@
                                     </f:facet>
 
                                     <h:panelGrid columns="1" >
+                                        <p:selectBooleanCheckbox value="#{patientController.reportKeyWord.additionalDetails}" 
+                                                                 itemLabel="Serch Only Registed Patient" >
+                                            <f:ajax execute="@this" render="acPt" />
+                                        </p:selectBooleanCheckbox>
                                         <h:outputLabel value="Search by Name/Code/Phone/NIC/PHN" />
                                         <p:autoComplete widgetVar="aPt" id="acPt" forceSelection="true" 
-                                                        value="#{patientController.current}" 
+                                                        value="#{patientController.current}" minQueryLength="4"
                                                         completeMethod="#{patientController.completePatientByNameOrCode}" 
                                                         var="apt" itemLabel="#{apt.person.name}" 
                                                         itemValue="#{apt}" size="30"  style="width: 400px;"
@@ -193,10 +197,6 @@
                                                 <p:inputText autocomplete="off"  id="txtNewPtName" value="#{patientController.current.person.name}" style="width: 200px;text-transform:uppercase;">
                                                 </p:inputText>
 
-                                                <h:outputLabel value="Comments"/>
-                                                <p:inputTextarea id="txtNewPtComments" value="#{patientController.current.comments}" style="width: 200px; height: 125px;">
-                                                </p:inputTextarea>
-
                                                 <h:outputLabel value="Code"/>
                                                 <p:inputText value="#{patientController.current.code}"/>
 
@@ -246,9 +246,18 @@
                                                 </h:panelGrid>
 
                                                 <h:outputLabel value="Address"/>
-                                                <p:inputText autocomplete="off"  id="txtNewPtAddress" value="#{patientController.current.person.address}">
-                                                </p:inputText>
-
+                                                <p:inputTextarea id="txtNewPtAddress" value="#{patientController.current.person.address}" 
+                                                                 style="width: 400px; height: 75px;">
+                                                </p:inputTextarea>
+<!--                                                <p:inputText autocomplete="off"  id="txtNewPtAddress" value="#{patientController.current.person.address}">
+                                                </p:inputText>-->
+                                                <p:outputLabel value="Area"></p:outputLabel>
+                                                <p:autoComplete styleClass="mediuminput" widgetVar="np" id="acnp" forceSelection="true" 
+                                                                value="#{patientController.current.person.area}" 
+                                                                completeMethod="#{areaController.completeArea}" 
+                                                                var="npt" itemLabel="#{npt.name}" 
+                                                                itemValue="#{npt}" size="30"  style="width: 40px;">
+                                                </p:autoComplete>
                                                 <h:outputLabel value="Phone"/>
                                                 <p:inputMask mask="999-9999999" id="txtNewPtPhone" autocomplete="off" maxlength="11" value="#{patientController.current.person.phone}">
                                                 </p:inputMask>
@@ -262,6 +271,11 @@
                                                 <h:outputLabel value=""/>
 
                                                 <h:outputLabel id="lblPtAge" value="#{patientController.current.age}"/>
+
+                                                <h:outputLabel value="Comments"/>
+                                                <p:inputTextarea id="txtNewPtComments" value="#{patientController.current.comments}" 
+                                                                 style="width: 400px; height: 75px;">
+                                                </p:inputTextarea>
 
                                             </h:panelGrid>
 
