--- a/src/main/webapp/pharmacy/pharmacy_bill_retail_sale.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_bill_retail_sale.xhtml
@@ -410,7 +410,10 @@
 
                                         <p:tab id="tabSearchPt" title="Search Patient" >
 
-
+                                            <p:selectBooleanCheckbox value="#{patientController.reportKeyWord.additionalDetails}" 
+                                                                     itemLabel="Serch Only Registed Patient" >
+                                                <f:ajax execute="@this" render="acPt" />
+                                            </p:selectBooleanCheckbox>
                                             <p:autoComplete
                                                 widgetVar="aPt" 
                                                 id="acPt" forceSelection="true" 
@@ -420,6 +423,32 @@
                                                 itemValue="#{apt}" size="30"  
                                                 style="width: 400px;"
                                                 disabled="#{pharmacySaleController.fromOpdEncounter}">
+                                                <p:column headerText="Name">
+                                                    <h:outputLabel value="#{apt.person.nameWithTitle}" />
+                                                </p:column>
+                                                <p:column headerText="Age">
+                                                    <h:outputLabel value="#{apt.age}" />
+                                                </p:column>
+                                                <p:column headerText="NIC">
+                                                    <h:outputLabel value="#{apt.person.nic}"/>
+                                                </p:column>
+                                                <p:column headerText="Code">
+                                                    <h:outputLabel value="#{apt.code}" />
+                                                </p:column>
+                                                <p:column headerText="PHN">
+                                                    <h:outputLabel value="#{apt.phn}"/>
+                                                </p:column>
+                                                <p:column headerText="Sex">
+                                                    <h:outputLabel value="#{apt.person.sex}" />
+                                                </p:column>
+                                                <p:column headerText="Address">
+                                                    <h:outputLabel value="#{apt.person.address}" />
+                                                </p:column>
+                                                <p:column headerText="Date of Birth">
+                                                    <h:outputLabel value="#{apt.person.dob}" >
+                                                        <f:convertDateTime pattern="dd MMMM yyyy"/>
+                                                    </h:outputLabel>
+                                                </p:column>
                                                 <p:ajax event="itemSelect" process="@this" update=":#{p:component('cmbPs')} :#{p:component('cmbPs2')} :#{p:component('pBillDetails')} panSearch"
                                                         listener="#{pharmacySaleController.searchPatientListener}"/>
                                             </p:autoComplete>  
@@ -532,7 +561,7 @@
                         <h:panelGroup   id="gpBillPreview" >
 
                             <h:panelGroup   id="gpBillPreviewSingle" >
-                                
+
                             </h:panelGroup>
 
                             <h:panelGroup   id="gpBillWithOutItem" rendered="#{sessionController.institutionPreference.pharmacyBillPaperType eq 'PosPaper'}">
@@ -541,7 +570,7 @@
                                         <phi:saleBill_without_item bill="#{pharmacySaleController.printBill}"></phi:saleBill_without_item>                                        
                                     </h:panelGroup>
                                 </div>
-                                
+
                                 <div>
                                     <h:panelGroup rendered="#{sessionController.institutionPreference.pharmacyBillPrabodha eq false}" > 
                                         <phi:saleBill bill="#{pharmacySaleController.printBill}"></phi:saleBill>
