--- a/src/main/webapp/pharmacy/pharmacy_bill_retail_sale_1.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_bill_retail_sale_1.xhtml
@@ -100,7 +100,7 @@
                                         </h:panelGrid>
 
                                         <p:commandButton  accesskey="a" id="btnAdd" value="Add" 
-                                                         action="#{pharmacySaleController1.addBillItemNew()}" 
+                                                          action="#{pharmacySaleController1.addBillItemNew()}" 
                                                           process="@this acStock txtQty :#{p:component('cmbPs')}" 
                                                           update=":#{p:component('netTotal')} :#{p:component('dis')} :#{p:component('total')} :#{p:component('pBillDetails')} :#{p:component('tblBillItem')} txtRate txtQty acStock focusItem :#{p:component('tabI')} :#{p:component('panelError')} " ></p:commandButton>
 
@@ -318,16 +318,16 @@
 
                                         <p:commandButton ajax="false" accesskey="s" value="Settle" 
                                                          onclick="onSubmitButton();"
-                                                        action="#{pharmacySaleController1.settleBillWithPay}" >
+                                                         action="#{pharmacySaleController1.settleBillWithPay}" >
                                             <f:facet name="title" >
                                                 <h:outputLabel value="S" style="text-decoration: underline;" ></h:outputLabel>
                                                 <h:outputLabel value="ettle"  ></h:outputLabel>
                                             </f:facet>
                                         </p:commandButton>
                                         <p:commandButton accesskey="n" value="New Pharmacy Bill"  
-                                                       ajax="false" action="pharmacy_bill_retail_sale_1"
+                                                         ajax="false" action="pharmacy_bill_retail_sale_1"
                                                          onclick="onSubmitButton();"
-                                                        actionListener="#{pharmacySaleController1.resetAll()}"  ></p:commandButton>
+                                                         actionListener="#{pharmacySaleController1.resetAll()}"  ></p:commandButton>
 
 
                                     </h:panelGrid>
@@ -393,7 +393,10 @@
 
                                         <p:tab id="tabSearchPt" title="Search Patient" >
 
-
+                                            <p:selectBooleanCheckbox value="#{patientController.reportKeyWord.additionalDetails}" 
+                                                                     itemLabel="Serch Only Registed Patient" >
+                                                <f:ajax execute="@this" render="acPt" />
+                                            </p:selectBooleanCheckbox>
                                             <p:autoComplete
                                                 widgetVar="aPt" 
                                                 id="acPt" forceSelection="true" 
@@ -403,6 +406,32 @@
                                                 itemValue="#{apt}" size="30"  
                                                 style="width: 400px;"
                                                 disabled="#{pharmacySaleController1.fromOpdEncounter}">
+                                                <p:column headerText="Name">
+                                                    <h:outputLabel value="#{apt.person.nameWithTitle}" />
+                                                </p:column>
+                                                <p:column headerText="Age">
+                                                    <h:outputLabel value="#{apt.age}" />
+                                                </p:column>
+                                                <p:column headerText="NIC">
+                                                    <h:outputLabel value="#{apt.person.nic}"/>
+                                                </p:column>
+                                                <p:column headerText="Code">
+                                                    <h:outputLabel value="#{apt.code}" />
+                                                </p:column>
+                                                <p:column headerText="PHN">
+                                                    <h:outputLabel value="#{apt.phn}"/>
+                                                </p:column>
+                                                <p:column headerText="Sex">
+                                                    <h:outputLabel value="#{apt.person.sex}" />
+                                                </p:column>
+                                                <p:column headerText="Address">
+                                                    <h:outputLabel value="#{apt.person.address}" />
+                                                </p:column>
+                                                <p:column headerText="Date of Birth">
+                                                    <h:outputLabel value="#{apt.person.dob}" >
+                                                        <f:convertDateTime pattern="dd MMMM yyyy"/>
+                                                    </h:outputLabel>
+                                                </p:column>
                                                 <p:ajax event="itemSelect" process="@this" update=":#{p:component('cmbPs')} :#{p:component('pBillDetails')} panSearch"
                                                         listener="#{pharmacySaleController1.searchPatientListener}"/>
                                             </p:autoComplete>  
@@ -494,7 +523,7 @@
 
 
                         <p:commandButton id="nullButton3" value="No Action"
-                                        action="#" style="display: none;" ></p:commandButton>
+                                         action="#" style="display: none;" ></p:commandButton>
                         <p:defaultCommand  target="btnPrint" />  
 
                         <div class="nonPrintBlock" >
@@ -502,9 +531,9 @@
                                 <p:printer target="gpBillPreview" ></p:printer>
                             </p:commandButton>
                             <p:commandButton accesskey="n" value="New Pharmacy Bill"  
-                                           ajax="false" action="pharmacy_bill_retail_sale_1" 
+                                             ajax="false" action="pharmacy_bill_retail_sale_1" 
                                              onclick="onSubmitButton();"
-                                            actionListener="#{pharmacySaleController1.resetAll()}" ></p:commandButton>
+                                             actionListener="#{pharmacySaleController1.resetAll()}" ></p:commandButton>
 
                             <p:commandButton value="Sale 1" action="pharmacy_bill_retail_sale" rendered="#{webUserController.hasPrivilege('PharmacySale')}" actionListener="#{pharmacySaleController.pharmacyRetailSale()}" />
                             <p:commandButton disabled="true" value="Sale 2" action="pharmacy_bill_retail_sale_1" rendered="#{webUserController.hasPrivilege('PharmacySale')}" actionListener="#{pharmacySaleController1.pharmacyRetailSale()}" />
