--- a/src/main/webapp/pharmacy/pharmacy_bill_retail_sale_for_cashier.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_bill_retail_sale_for_cashier.xhtml
@@ -97,7 +97,7 @@
                                         </h:panelGrid>
 
                                         <p:commandButton  accesskey="a" id="btnAdd" value="Add" 
-                                                         action="#{pharmacySaleController.addBillItemNew()}" 
+                                                          action="#{pharmacySaleController.addBillItemNew()}" 
                                                           process="@this acStock txtQty :#{p:component('cmbPs')}" 
                                                           update=":#{p:component('netTotal')} :#{p:component('dis')} :#{p:component('total')} :#{p:component('pBillDetails')} :#{p:component('tblBillItem')} txtRate txtQty acStock focusItem :#{p:component('tabI')}" ></p:commandButton>
 
@@ -315,10 +315,10 @@
                                             <pa:slip paymentMethodData="#{pharmacySaleController.paymentMethodData}"/>
                                         </h:panelGroup>
                                         <p:commandButton accesskey="c" ajax="false" value="For Cashier"
-                                                        action="#{pharmacySaleController.settlePreBill()}" 
+                                                         action="#{pharmacySaleController.settlePreBill()}" 
                                                          onclick="onSubmitButton();" ></p:commandButton>
                                         <p:commandButton accesskey="n" value="New Pharmacy Bill" ajax="false" 
-                                                        actionListener="#{pharmacySaleController.resetAll}"  ></p:commandButton>
+                                                         actionListener="#{pharmacySaleController.resetAll}"  ></p:commandButton>
 
 
                                     </h:panelGrid>
@@ -380,7 +380,10 @@
 
                                         <p:tab id="tabSearchPt" title="Search Patient" >
 
-
+                                            <p:selectBooleanCheckbox value="#{patientController.reportKeyWord.additionalDetails}" 
+                                                                     itemLabel="Serch Only Registed Patient" >
+                                                <f:ajax execute="@this" render="acPt" />
+                                            </p:selectBooleanCheckbox>  
                                             <p:autoComplete
                                                 widgetVar="aPt" 
                                                 id="acPt" forceSelection="true" 
@@ -390,6 +393,32 @@
                                                 itemValue="#{apt}" size="30"  
                                                 style="width: 400px;"
                                                 disabled="#{pharmacySaleController.fromOpdEncounter}">
+                                                <p:column headerText="Name">
+                                                    <h:outputLabel value="#{apt.person.nameWithTitle}" />
+                                                </p:column>
+                                                <p:column headerText="Age">
+                                                    <h:outputLabel value="#{apt.age}" />
+                                                </p:column>
+                                                <p:column headerText="NIC">
+                                                    <h:outputLabel value="#{apt.person.nic}"/>
+                                                </p:column>
+                                                <p:column headerText="Code">
+                                                    <h:outputLabel value="#{apt.code}" />
+                                                </p:column>
+                                                <p:column headerText="PHN">
+                                                    <h:outputLabel value="#{apt.phn}"/>
+                                                </p:column>
+                                                <p:column headerText="Sex">
+                                                    <h:outputLabel value="#{apt.person.sex}" />
+                                                </p:column>
+                                                <p:column headerText="Address">
+                                                    <h:outputLabel value="#{apt.person.address}" />
+                                                </p:column>
+                                                <p:column headerText="Date of Birth">
+                                                    <h:outputLabel value="#{apt.person.dob}" >
+                                                        <f:convertDateTime pattern="dd MMMM yyyy"/>
+                                                    </h:outputLabel>
+                                                </p:column>
                                                 <p:ajax event="itemSelect" process="@this" update=":#{p:component('cmbPs')} :#{p:component('pBillDetails')} panSearch"
                                                         listener="#{pharmacySaleController.searchPatientListener}"/>
                                             </p:autoComplete>  
