--- a/src/main/webapp/credit/inward_due_age.xhtml
+++ b/src/main/webapp/credit/inward_due_age.xhtml
@@ -15,8 +15,8 @@
                     
                     <p:dataTable id="lst" value="#{creditCompanyDueController.creditCompanyAge}" var="i"
                                  filteredValue="#{creditCompanyDueController.filteredList}">                       
-                        <p:column headerText="Dealor Name" filterBy="#{i.string}" filterMatchMode="contains">       
-                            <h:outputLabel  value="#{i.string}"/>
+                        <p:column headerText="Dealor Name" filterBy="#{i.institution.name}" filterMatchMode="contains">       
+                            <h:outputLabel  value="#{i.institution.name}"/>
                         </p:column>                               
                         <p:column headerText="0-30" filterBy="#{i.value1}" filterMatchMode="contains">   
                             <h:outputLabel  value="#{i.value1}">
@@ -33,7 +33,7 @@
                                   <f:convertNumber pattern="#,##0.00" />
                              </h:outputLabel>
                         </p:column>
-                        <p:column headerText="90 More" filterBy="#{i.value4}" filterMatchMode="contains">   
+                        <p:column headerText="90 More" filterBy="#{i.value4}" styleClass="numberCol" filterMatchMode="contains">   
                              <h:outputLabel  value="#{i.value4}">
                                   <f:convertNumber pattern="#,##0.00" />
                              </h:outputLabel>
